2008-09-22 Frank Naegler  <typo3@naegler.net>

	* added member invite function for group editing settings
	* added new function isFriendOfCurrentlyLoggedInUser to the tx_community_model_UserGateway
	* bugfix: initialize groupGateway in tx_community_controller_ListGroupsApplication
	
2008-09-21 Ingo Renner  <ingo@typo3.org>

	* added a way to exclude community application from being listed in the community plugin's flexform
	* made the application manager available in global scope when the community plugin is executed
	* removed includes of the application manager as it is loaded with the community FE plugin
	* changed existing community applications to use the global instance of the application manager
	* !!! changed API of addLoop() in the template engine, now requires a marker name as second parameter for the looped variable
	* !!! renamed method in template engine, getMarkersFromSupart() is now named getMarkersFromTemplate()
	* added a new community application (UserList) to list users
	* added rendering of search results using the new UserList application

2008-09-19 Ingo Renner  <ingo@typo3.org>

	* added initial scaffolding for a criteria class to work with conditions for selecting records in an object oriented way
	* added initial code for the user profile search feature
	* added "compilation" of a where clause from search parameters in the search application, depending on TS configuration

2008-09-18 Ingo Renner  <ingo@typo3.org>

	* added a quick search input field widget
	* added basic scaffolding for the search application
	* added configuration for advanced search form
	* added rendering of advanced search form

2008-09-13 Ingo Renner  <ingo@typo3.org>

	* added initial support for anonymous visitors (anyone role)

2008-09-12 Ingo Renner  <ingo@typo3.org>

	* added a new group in the TS setup for access management
	* added a TS property to define a role Id that acts as "anonymous"