@@ -214,6 +214,28 @@ class tx_community_AccessManager {
 		return $rules;
 	}
 
+	
+	// @TODO: @Frank: Check implementation
+	public function isFriendOfCurrentlyLoggedInUser(tx_community_model_User $user) {
+		$isFriend = false;
+		$loggedinUser = $this->userGateway->findCurrentlyLoggedInUser();
+		if (is_null($loggedinUser)) {
+			return $isFriend;
+		}
+		if ($user instanceof tx_community_model_User) {
+			$userRows = $GLOBALS['TYPO3_DB']->exec_SELECTgetRows(
+				'friend',	// FIXME friend role name must not be hardcoded!
+				'tx_community_friend',
+				'feuser = ' . $user->getUid() . ' AND friend = ' . $user->getUid()	// FIXME friend role name must not be hardcoded!
+			);
+			if (is_array($userRows) && count($userRows)) {
+				$isFriend = true;
+			}
+		}
+		
+		return $isFriend;
+	}
+	
 	public function addRule(array $rule) {
 		if ($rule['access_mode'] == 1) {
 				// allow
